# simon_says

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
game/: Cargo.toml
game/assets/models/: Animated Human.glb
game/proptest-regressions/: actions.txt
game/src/: actions.rs  assets.rs  delayed_command.rs  eyes.rs  game_state.rs  level.rs  lib.rs  main.rs  maybe.rs  music.rs  player.rs  simulation.rs  ui.rs  video_glitch.rs
game/src/ui/: action_list.rs  action_menu.rs  button.rs  challenges.rs  constants.rs  controls.rs  dialogue.rs  end_screen.rs  main_menu.rs  mod.rs  settings.rs
site/: .gitignore  assets  index.html
