[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false }
bevy-inspector-egui = { version = "0.31", optional = true }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader.git", branch = "bevy_main" }
bevy_firework = { version = "0.7", default-features = false }
bevy_kira_audio = "0.23.0"
bevy_pkv = "0.13.0"
bevy_platform = "0.16.0"
bevy_tweening = "0.13.0"
bevy_video_glitch = "0.2.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
gloo-storage = "0.3.0"
rand = { version = "0.9.0" }
serde = { version = "1.0.204", features = ["derive"] }
tracing = "0.1.40"

[dev-dependencies]
itertools = "0.13.0"
proptest = "1.5.0"
similar-asserts = "1.5.0"
tracing-subscriber = "0.3.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-macro = { version = "0.2" }


[features]
debug = ["dep:bevy-inspector-egui"]
default = [
  "bevy/animation",
  "bevy/bevy_asset",
  "bevy/bevy_state",
  "bevy/bevy_color",
  "bevy/bevy_gilrs",
  "bevy/bevy_scene",
  "bevy/bevy_winit",
  "bevy/bevy_core_pipeline",
  "bevy/bevy_pbr",
  "bevy/bevy_gltf",
  "bevy/bevy_render",
  "bevy/bevy_sprite",
  "bevy/bevy_text",
  "bevy/bevy_ui",
  "bevy/multi_threaded",
  "bevy/png",
  "bevy/hdr",
  "bevy/vorbis",
  "bevy/x11",
  "bevy/bevy_gizmos",
  "bevy/android_shared_stdcxx",
  "bevy/tonemapping_luts",
  "bevy/smaa_luts",
  "bevy/default_font",
  "bevy/webgl2",
  "bevy/sysinfo_plugin",
]
